# orographic-precipitation

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  environment-dev.yml  environment.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: test.yml  test_notebooks.yml
ci/requirements/: py36.yml  py39.yml
doc/: about.rst  whats_new.rst
orographic-precipitation/: __init__.py  orographic_precipitation.py
orographic_precipitation/: __init__.py  _version.py  fastscape_ext.py  orographic_precipitation.py
orographic_precipitation/examples/: basic_example.ipynb
orographic_precipitation/notebooks/: example_basic_usage.ipynb  example_with_FastScape.ipynb
orographic_precipitation/process/: OrographicPrecipitation.py  __init__.py
orographic_precipitation/tests/: fixture_orographic_precipitation.py  test_orographic_precipitation.py  test_process_orographic_precipitation.py
