[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
[tool.setuptools.packages.find]
include = [
    "orographic_precipitation",
    "orographic_precipitation.*",
]

[tool.setuptools_scm]
fallback_version = "9999"

[project]
name = "orographic_precipitation"
dynamic = ["version"]
authors = [
    {name = "Raphael Lange"},
]
maintainers = [
    {name = "Fastscape contributors"},
]
license = {text = "MIT"}
description = "Linear Theory of Orographic Precipitation"
keywords = ["simulation", "toolkit", "modeling", "landscape", "geomorphology"]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "xarray-simlab >= 0.5.0",
    "numpy",
    "fastscape"
]

[project.urls]
Repository = "https://github.com/fastscape-lem/orographic-precipitation"

[tool.black]
line-length = 100

[tool.ruff]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "I", # isort
  "UP", # Pyupgrade
]
exclude = [".eggs", "doc"]
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["orographic_precipitation"]




